﻿22.3.19-NOCEGUI
===============
 + Cleanup plug-in ABI (missing / incorrectly named DLL exports)

22.3.18.2-NOCEGUI
=================
 + Update game speed memory pattern for Elden Ring 1.3.1
 + Elden Ring DualShock 4 controller users should open SK's control panel and
     re-enable PS buttons.

    >> This will delete the old texture and download the correct new one.

22.3.18-NOCEGUI
===============
 + Updated Elden Ring plug-in with new button texture hash and game speed code
 + Restored normal HDR Peak Luminance behavior for scRGB / ACES Filmic tonemaps

22.3.11.3-NOCEGUI
=================
 + Added extra logging for D3D12 SwapChain format issues during ImGui init

22.3.11.2-NOCEGUI
=================
 + Fixed OpenGL-IK DX/GL Interop Shader broken in 22.3.11
 + Fixed HDR in Life is Strange True Colors (D3D12)
 + Fixed Latent Sync causing crashes in some D3D12 "Fullscreen" games

22.3.11-NOCEGUI
===============
 + Added support for HDR override in Guardians of the Galaxy and Forza Horizon 5

22.3.7.1-NOCEGUI
================
 + Removed Restart option from File menu if Global Injection is not active
 + Changed ] and [ keybinds in D3D9 mod tools window to behave like D3D11
 + Fixed D3D9 Blocking Texture loads delaying more threads than intended
 + Added Initialize Texutre Mods to File menu for D3D9/12

22.3.7-NOCEGUI
==============
 + Added 64-bit Steam AppID support (non-Steam games launched via Steam)
 + Fixed accidental removal of Latent Sync keybind config logic
 + Partially restored D3D9 texture mod support

22.3.6-NOCEGUI
==============
 + Fixed SteamInputAppID not being set to 0 initially
 + Removed libScePad.dll resource dependency from project
 + Fixed wrong game speed value being written to Elden Ring INI

22.3.5-NOCEGUI
==============
 + Reduced D3D12 Copy Command Allocator overhead in Elden Ring
 + Testing alternate Thread Pool scheduling to fix 'EzWorkPool' dumping all
     of its threads onto core 0/2 in Elden Ring
